# DIKUs-Ark

./: .gitattributes  .gitignore  pyproject.toml
Docs/: flask_impl_plan.md
app/: app.py
app/data/denmark_prototype/: README.md
app/data/denmark_prototype/tabular/: extra_info_denmark.parquet
app/instance/: test_database.db
app/static/: styles.css  styles.css.map  styles.scss
app/static/imgs/: feature_pagination.mov  feature_search.mov  feature_sorting.mov
app/templates/: index.html  layout.html  map.html  spatial.html  spatial_rows.html  table.html  table_heads.html  tutorial.html  update.html
denmark_prototype/: denmark.duckdb  denmark_maps.py  sort_db.sql
denmark_prototype/__marimo__/session/: denmark_maps.py.json
